2010-05-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkBind.c: Revert [Patch #2999920], as it entails an
	incompatible change to the C API is and is the cause of
	[Bug #3002768].

2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBind.c    [Patch #2999920]: Optimize Internal Virtual event
	string operations
	* win/tkWinDialog.c   [Bug #2987995]: Tk_getOpenFile returns garbage under
	described circumstances

2010-05-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/RestrictEv.3    Consistent use of variable names in RestrictEvent
	* generic/tkGrab.c    API documentation and implementation: Use 'prev'
	* unix/tkUnixDraw.c   in stead of 'old', and 'arg' in stead of
	* unix/tkUnixSend.c   'clientData' everywhere, just as in tkEvent.c.
	* unix/tkUnixWm.c

2010-05-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/BindTable.3      Bring in line with actual implementation.
	* generic/tk.decls     Change Tk_CreateBinding param name, as in doc
	* generic/tkInt.decls  CONSTify TkCopyAndGlobalEval, TkpSetMainMenubar,
	* generic/tkBind.c     TkpMenuNotifyToplevelCreate, and TkSetWindowMenuBar
	* generic/tkMenu.c
	* generic/tkDecls.h    (regenerated)
	* generic/tkIntDecls.h (regenerated)
	* carbon/tkMacOSXMenu.c
	* macosx/tkMacOSXMenu.c
	* unix/tkUnixMenu.c
	* win/tkWinMenu.c

2010-05-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump patchlevel to 8.6b1.2 to distinguish
	* library/tk.tcl:	CVS snapshots from earlier snapshots as well
	* unix/configure.in:	as the 8.6b1 and 8.6b2 releases.
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2010-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
	Apply a bit more care to ensure that things continue to work correctly
	even when there is no -selectcolor defined.

2010-04-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin.h:		Unnecessary TCL_STORAGE_CLASS re-definition